--- a/LiteCommerce.Admin/Views/Account/SignIn.cshtml
+++ b/LiteCommerce.Admin/Views/Account/SignIn.cshtml
@@ -40,17 +40,19 @@
         <div class="login-box-body">
             <p class="login-box-msg">Sign in to start your session</p>
 
-            <form action="~/Themes/AdminLTE/index2.html" method="post">
+            <form action="~/Account/SignIn" method="post">
+                @Html.AntiForgeryToken()
                 <div class="form-group has-feedback">
-                    <input type="email" class="form-control" placeholder="Email">
-                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                    <input name="email" type="email" class="form-control" placeholder="Email">
+                    <span name="password" class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input name="password" type="password" class="form-control" placeholder="Password">
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
                 <div class="row">
-                    <div class="col-xs-8">
+                    <div class="col-xs-8" style="color: red">
+                        @Html.ValidationMessage("LoginError")
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
