--- a/LiteCommerce.Admin/Views/Account/SignIn.cshtml
+++ b/LiteCommerce.Admin/Views/Account/SignIn.cshtml
@@ -43,7 +43,7 @@
             <form action="~/Account/SignIn" method="post">
                 @Html.AntiForgeryToken()
                 <div class="form-group has-feedback">
-                    <input name="email" type="email" class="form-control" placeholder="Email">
+                    <input name="email" type="email" class="form-control" placeholder="Email" autofocus>
                     <span name="password" class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
