--- a/LiteCommerce.Admin/Views/Product/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Product/Index.cshtml
@@ -3,3 +3,94 @@
     ViewBag.Title = "Products";
 }
 
+<div class="box box-primary">
+    <div class="box-body">
+        <div class="input-group input-group-sm">
+            <input type="text" class="form-control" placeholder="Input search value...">
+            <span class="input-group-btn">
+                <button type="button" class="btn btn-primary btn-flat">
+                    <i class="fa fa-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+</div>
+<div class="container-fluid row" style="margin-bottom:10px;">
+    <div class="col-sm-8">
+        There are <b>1,000</b> Products. Page 1/100
+    </div>
+    <div class="col-md-4 text-right">
+        <div class="btn-group">
+            <a href="~/Product/Input" class="btn btn-sm btn-primary">Add Product</a>
+            <button type="button" class="btn btn-sm btn-danger">Delete Products</button>
+        </div>
+    </div>
+</div>
+<div class="box box-success">
+    <div class="box-body">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th style="width:30px">
+                        <input type="checkbox" />
+                    </th>
+                    <th style="width:50px">#</th>
+                    <th style="width:200px">Name</th>
+                    <th style="width:200px">Supplier</th>
+                    <th style="width:200px">Category</th>
+                    <th style="width:200px">Quantity Per Unit</th>
+                    <th style="width:100px">Unit Price</th>
+                    <th style="width:200px">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int i = 1; i <= 3; i++)
+                {
+                    <tr>
+                        <td>
+                            <input type="checkbox" />
+                        </td>
+                        <td>@i</td>
+                        <td>
+                            <div class="pull-left image">
+                                <img src="~/Themes/AdminLTE/dist/img/user2-160x160.jpg" height="60px" width="60px" class="img-circle" alt="User Image">
+                            </div>
+                            <span style="color:#0094ff; font-weight:bold; display:block">
+                                Aniseed Syrup
+                            </span>
+                        </td>
+                        <td>
+                            New Orleans Cajun Delights
+                        </td>
+                        <td>
+                            Dairy Products
+                        </td>
+                        <td>
+                            10 boxes x 20 bags
+                        </td>
+                        <td>
+                            18.00
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </td>
+                        <td class="text-right">
+                            <a class="btn btn-sm btn-default" href="~/Product/Input/@i/">
+                                <i class="fa fa-edit"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="box-footer clearfix text-center">
+        <ul class="pagination pagination-sm no-margin pull-right">
+            <li><a href="#">«</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">»</a></li>
+        </ul>
+    </div>
+</div>
