--- a/LiteCommerce.Admin/Views/Customer/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Customer/Index.cshtml
@@ -1,21 +1,25 @@
-﻿@{
+﻿@model LiteCommerce.Admin.Models.CustomerPaginationResult
+@{
     ViewBag.Title = "Customer";
+    int i = 0;
 }
 <div class="box box-primary">
     <div class="box-body">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control" placeholder="Input search value...">
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-primary btn-flat">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-        </div>
+        <form action="~/Customer" method="get">
+            <div class="input-group input-group-sm">
+                <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-primary btn-flat">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
     </div>
 </div>
 <div class="container-fluid row" style="margin-bottom:10px;">
     <div class="col-sm-8">
-        There are <b>1,000</b> Customers. Page 1/100
+        There are <b>@Model.RowCount</b> Customers. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
     </div>
     <div class="col-md-4 text-right">
         <div class="btn-group">
@@ -40,34 +44,34 @@
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 1; i <= 3; i++)
+                @foreach (var customer in Model.Data)
                 {
                     <tr>
                         <td>
                             <input type="checkbox" />
                         </td>
-                        <td>@i</td>
+                        <td>@(++i)</td>
                         <td>
                             <span style="color:#0094ff; font-weight:bold; display:block">
-                                Shelley Burke
+                                @customer.ContactName
                             </span>
                             <span style="color:#646464">
                                 Company name:
                             </span>
                             <span style="color:#646464;font-weight:bold">
-                                New Orleans Cajun Delights
+                                @customer.CompanyName
                             </span>
                             <span style="display: block; color:#646464">
-                                Title: Manager
+                                Title: @customer.ContactTitle
                             </span>
                         </td>
                         <td>
-                            <span style="display:block">P.O. Box 78934</span>
-                            <span>New Orleans - USA</span>
+                            <span style="display:block">@customer.Address</span>
+                            <span>@customer.Country</span>
                         </td>
                         <td>
-                            <span style="display:block"><i class="fa fa-phone"></i> (100) 555-4822</span>
-                            <span style="display:block"><i class="fa fa-fax"></i> (100) 333-665411</span>
+                            <span style="display:block"><i class="fa fa-phone"></i>@customer.Phone</span>
+                            <span style="display:block"><i class="fa fa-fax"></i>@customer.Fax</span>
                         </td>
                         <td class="text-right">
                             <a class="btn btn-sm btn-default" href="~/Customer/Input/@i/">
@@ -81,11 +85,19 @@
     </div>
     <div class="box-footer clearfix text-center">
         <ul class="pagination pagination-sm no-margin pull-right">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">»</a></li>
+            <li><a href="~/Customer?searchValue=@Model.SearchValue">«</a></li>
+            @for (int page = 1; page <= Model.PageCount; page++)
+            {
+                if (page == Model.Page)
+                {
+                    <li class="active"><a href="#">@page</a></li>
+                }
+                else
+                {
+                    <li><a href="~/Supplier?page=@page&searchValue=@Model.SearchValue">@page</a></li>
+                }
+            }
+            <li><a href="~/Customer?page=@Model.PageCount&searchValue=@Model.SearchValue">»</a></li>
         </ul>
     </div>
 </div>
