--- a/LiteCommerce.Admin/Views/Supplier/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Supplier/Index.cshtml
@@ -1,23 +1,25 @@
-﻿@model IEnumerable<LiteCommerce.DomainModels.Supplier>
+﻿@model LiteCommerce.Admin.Models.SupplierPaginationResult
 @{
     ViewBag.Title = "Manage Suppliers";
     int i = 0;
 }
 <div class="box box-primary">
     <div class="box-body">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control" placeholder="Input search value...">
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-primary btn-flat">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-        </div>
+        <form action="~/Supplier" method="get">
+            <div class="input-group input-group-sm">
+                <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-primary btn-flat">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
     </div>
 </div>
 <div class="container-fluid row" style="margin-bottom:10px;">
     <div class="col-sm-8">
-        There are <b>@ViewBag.RowCount</b> Suppliers. Page 1/100
+        There are <b>@Model.RowCount</b> Suppliers. Page <b>@string.Format("{0}/{1}", Model.Page, Model.PageCount)</b>
     </div>
     <div class="col-md-4 text-right">
         <div class="btn-group">
@@ -42,7 +44,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var supplier in Model)
+                @foreach (var supplier in Model.Data)
                 {
                     <tr>
                         <td>
@@ -53,12 +55,12 @@
                             <p style="color:#0094ff; font-weight:bold; display:block">
                                 @supplier.CompanyName
                             </p>
-                            <p style="color:#646464">
+                            <span style="color:#646464">
                                 @supplier.ContactTitle:
-                            </p>
-                            <p style="color:#646464;font-weight:bold">
+                            </span>
+                            <span style="color:#646464;font-weight:bold">
                                 @supplier.ContactName
-                            </p>
+                            </span>
                         </td>
                         <td>
                             <p style="display:block">@supplier.Address</p>
@@ -81,11 +83,19 @@
     </div>
     <div class="box-footer clearfix text-center">
         <ul class="pagination pagination-sm no-margin pull-right">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">»</a></li>
+            <li><a href="~/Supplier?searchValue=@Model.SearchValue">«</a></li>
+            @for (int page = 1; page <= Model.PageCount; page++)
+            {
+                if (page == Model.Page)
+                {
+                    <li class="active"><a href="#">@page</a></li>
+                }
+                else
+                {
+                    <li><a href="~/Supplier?page=@page&searchValue=@Model.SearchValue">@page</a></li>
+                }
+            }
+            <li><a href="~/Supplier?page=@Model.PageCount&searchvalue=@Model.SearchValue">»</a></li>
         </ul>
     </div>
 </div>
