--- a/LiteCommerce.Admin/Views/Employee/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Employee/Index.cshtml
@@ -1,94 +1,136 @@
-﻿@{
+﻿@model LiteCommerce.Admin.Models.EmployeePaginationResult
+@{
     ViewBag.Title = "Employees";
+    int i = 0;
 }
 <div class="box box-primary">
     <div class="box-body">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control" placeholder="Input search value...">
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-primary btn-flat">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-        </div>
+        <form action="~/Employee" method="get">
+            <div class="input-group input-group-sm">
+                <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-primary btn-flat">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
     </div>
 </div>
 <div class="container-fluid row" style="margin-bottom:10px;">
     <div class="col-sm-8">
-        There are <b>1,000</b> Employees. Page 1/100
-    </div>
-    <div class="col-md-4 text-right">
-        <div class="btn-group">
-            <a href="~/Employee/Input" class="btn btn-sm btn-primary">Add Employee</a>
-            <button type="button" class="btn btn-sm btn-danger">Delete Employees</button>
+        There are <b>@Model.RowCount</b> Employees. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
+        </div>
+        <div class="col-md-4 text-right">
+            <div class="btn-group">
+                <a href="~/Employee/Input" class="btn btn-sm btn-primary">Add Employee</a>
+                <button type="button" class="btn btn-sm btn-danger">Delete Employees</button>
+            </div>
         </div>
     </div>
-</div>
-<div class="box box-success">
-    <div class="box-body">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th style="width:30px">
-                        <input type="checkbox" />
-                    </th>
-                    <th style="width:50px">#</th>
-                    <th style="width: 240px">Name</th>
-                    <th>Milestones</th>
-                    <th>Contact Info</th>
-                    <th>Note</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 1; i <= 3; i++)
-                {
+    <div class="box box-success">
+        <div class="box-body">
+            <table class="table table-bordered">
+                <thead>
                     <tr>
-                        <td>
+                        <th style="width:30px">
                             <input type="checkbox" />
-                        </td>
-                        <td>@i</td>
-                        <td>
-                            <div class="pull-left image">
-                                <img src="~/Themes/AdminLTE/dist/img/user2-160x160.jpg" height="60px" width="60px" class="img-circle" alt="User Image">
-                            </div>
-                            <span style="color:#0094ff; font-weight:bold; display:block">
-                                Shelley Burke
-                            </span>
-                            <span style="color:#646464;font-weight:bold">
-                                Sales Representative
-                            </span>
-                        </td>
-                        <td>
-                            <span style="display:block">BirthDay: 05/12/1998</span>
-                            <span>HireDate: 06/06/2020</span>
-                        </td>
-                        <td>
-                            <span style="display:block"><i class="fa fa-envelope"></i>Email@email.com</span>
-                            <span style="display:block"><i class="fa fa-home"></i>P.O. Box 78934, New Orleans - USA</span>
-                            <span style="display:block"><i class="fa fa-phone"></i> (100) 555-4822</span>
-                            <span style="display:block"><i class="fa fa-fax"></i> (100) 333-665411</span>
-                        </td>
-                        <td>
-                            <span style="display:block">Notes for employee</span>
-                        </td>
-                        <td class="text-right">
-                            <a class="btn btn-sm btn-default" href="~/Employee/Input/@i/">
-                                <i class="fa fa-edit"></i>
-                            </a>
-                        </td>
+                        </th>
+                        <th style="width:50px">#</th>
+                        <th style="width: 240px">Name</th>
+                        <th>Milestones</th>
+                        <th>Contact Info</th>
+                        <th>Note</th>
+                        <th></th>
                     </tr>
+                </thead>
+                <tbody>
+                    @foreach (var employee in Model.Data)
+                    {
+                        <tr>
+                            <td>
+                                <input type="checkbox" />
+                            </td>
+                            <td>@i</td>
+                            <td>
+                                <div class="pull-left image">
+                                    <img src="~/@employee.PhotoPath" height="60px" width="60px" class="img-circle" alt="User Image">
+                                </div>
+                                <span style="color:#0094ff; font-weight:bold; display:block">
+                                    @employee.FirstName @employee.LastName
+                                </span>
+                                <span style="color:#646464;font-weight:bold">
+                                    @employee.Title
+                                </span>
+                            </td>
+                            <td>
+                                <span style="display:block">BirthDay:@employee.BirthDate.ToShortDateString()</span>
+                                <span>HireDate:@employee.HireDate.ToShortDateString()</span>
+                            </td>
+                            <td>
+                                <span style="display:block"><i class="fa fa-envelope"></i>@employee.Email</span>
+                                <span style="display:block"><i class="fa fa-home"></i>@employee.Address, @employee.City, @employee.Country</span>
+                                <span style="display:block"><i class="fa fa-phone"></i>@employee.HomePhone</span>
+                            </td>
+                            <td>
+                                <span style="display:block">@employee.Notes</span>
+                            </td>
+                            <td class="text-right">
+                                <a class="btn btn-sm btn-default" href="~/Employee/Input/@i/">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <div class="box-footer clearfix text-center">
+            <ul class="pagination pagination-sm no-margin pull-right">
+                @{
+                    int currentPage = Model.Page;
+                    // Pagination head
+                    if (currentPage - 5 > 0)
+                    {
+                        int prePage = currentPage - 1;
+                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
+                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
+                        <li><a href="#">...</a></li>
+                    }
+                    int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
+                    for (int page = startPage; page <= currentPage; page++)
+                    {
+                        if (page == currentPage)
+                        {
+                            <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                        else
+                        {
+                            <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                    }
+
+                    // Pagination tail
+                    int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
+                    for (int page = currentPage + 1; page <= endPage; page++)
+                    {
+                        if (page == currentPage)
+                        {
+                            <li class="active"><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                        else
+                        {
+                            <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                    }
+                    if (currentPage + 4 < Model.PageCount)
+                    {
+                        int nextPage = currentPage + 1;
+                        <li><a href="#">...</a></li>
+                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
+                        <li><a href="~/Employee?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
+                    }
                 }
-            </tbody>
-        </table>
+            </ul>
+        </div>
     </div>
-    <div class="box-footer clearfix text-center">
-        <ul class="pagination pagination-sm no-margin pull-right">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">»</a></li>
-        </ul>
-    </div>
-</div>
