--- a/LiteCommerce.Admin/Views/Shipper/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Shipper/Index.cshtml
@@ -1,21 +1,25 @@
-﻿@{
+﻿@model LiteCommerce.Admin.Models.ShipperPaginationResult
+@{
     ViewBag.Title = "Shippers";
+    int i = 0;
 }
 <div class="box box-primary">
     <div class="box-body">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control" placeholder="Input search value...">
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-primary btn-flat">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-        </div>
+        <form action="~/Shipper" method="get">
+            <div class="input-group input-group-sm">
+                <input name="searchValue" type="text" class="form-control" placeholder="Input search value...">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-primary btn-flat">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
     </div>
 </div>
 <div class="container-fluid row" style="margin-bottom:10px;">
     <div class="col-sm-8">
-        There are <b>1,000</b> Shippers. Page 1/100
+        There are <b>@Model.RowCount</b> Shippers. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
     </div>
     <div class="col-md-4 text-right">
         <div class="btn-group">
@@ -39,19 +43,23 @@
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 1; i <= 3; i++)
+                @foreach (var shipper in Model.Data)
                 {
                     <tr>
                         <td>
                             <input type="checkbox" />
                         </td>
-                        <td>@i</td>
-                        <td class="title">Company A</td>
+                        <td>@(++i)</td>
                         <td>
-                            <span style="display:block"><i class="fa fa-phone"></i> (100) 555-4822</span>
+                            <p style="color:#0094ff; font-weight:bold; display:block">
+                                @shipper.CompanyName
+                            </p>
+                        </td>
+                        <td>
+                            <p style="display:block"><i class="fa fa-phone"></i> @shipper.Phone</p>
                         </td>
                         <td class="text-right">
-                            <a class="btn btn-sm btn-default" href="~/Shipper/Input/@i/">
+                            <a class="btn btn-sm btn-default" href="~/Supplier/Input/@i/">
                                 <i class="fa fa-edit"></i>
                             </a>
                         </td>
@@ -62,11 +70,51 @@
     </div>
     <div class="box-footer clearfix text-center">
         <ul class="pagination pagination-sm no-margin pull-right">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">»</a></li>
+            @{
+                int currentPage = Model.Page;
+                // Pagination head
+                if (currentPage - 5 > 0)
+                {
+                    int prePage = currentPage - 1;
+                    <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
+                    <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
+                    <li><a href="#">...</a></li>
+                }
+                int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
+                for (int page = startPage; page <= currentPage; page++)
+                {
+                    if (page == currentPage)
+                    {
+                        <li class="active"><a href="~/Shipper?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                }
+
+                // Pagination tail
+                int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
+                for (int page = currentPage + 1; page <= endPage; page++)
+                {
+                    if (page == currentPage)
+                    {
+                        <li class="active"><a href="~/Shipper?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                    }
+                }
+                if (currentPage + 4 < Model.PageCount)
+                {
+                    int nextPage = currentPage + 1;
+                    <li><a href="#">...</a></li>
+                    <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
+                    <li><a href="~/Shipper?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
+                }
+            }
         </ul>
     </div>
+
 </div>
