fix search bar of shipper

--- a/LiteCommerce.Admin/Views/Shipper/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Shipper/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="box-body">
         <form action="~/Shipper" method="get">
             <div class="input-group input-group-sm">
-                <input name="searchValue" type="text" class="form-control" placeholder="Input search value...">
+                <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
                 <span class="input-group-btn">
                     <button type="submit" class="btn btn-primary btn-flat">
                         <i class="fa fa-search"></i>
