--- a/LiteCommerce.Admin/Views/Category/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Category/Index.cshtml
@@ -17,102 +17,103 @@
         </form>
     </div>
 </div>
-<div class="container-fluid row" style="margin-bottom:10px;">
-    <div class="col-sm-8">
-        There are <b>@Model.RowCount</b> Categories. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
-    </div>
-    <div class="col-md-4 text-right">
-        <div class="btn-group">
-            <a href="~/Category/Input" class="btn btn-sm btn-primary">Add Category</a>
-            <button type="button" class="btn btn-sm btn-danger">Delete Categories</button>
+<form action="~/Category/Delete" method="post">
+    <div class="container-fluid row" style="margin-bottom:10px;">
+        <div class="col-sm-8">
+            There are <b>@Model.RowCount</b> Categories. Page @string.Format("{0}/{1}", Model.Page, Model.PageCount)
+        </div>
+        <div class="col-md-4 text-right">
+            <div class="btn-group">
+                <a href="~/Category/Input" class="btn btn-sm btn-primary">Add Category</a>
+                <button type="submit" class="btn btn-sm btn-danger">Delete Categories</button>
+            </div>
         </div>
     </div>
-</div>
-<div class="box box-success">
-    <div class="box-body">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th style="width:30px">
-                        <input type="checkbox" />
-                    </th>
-                    <th style="width:50px">#</th>
-                    <th style="width:200px">CategoryName</th>
-                    <th style="width:200px">Description</th>
-                    <th style="width:80px"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var category in Model.Data)
-                {
+    <div class="box box-success">
+        <div class="box-body">
+            <table class="table table-bordered">
+                <thead>
                     <tr>
-                        <td>
+                        <th style="width:30px">
                             <input type="checkbox" />
-                        </td>
-                        <td>@(++i)</td>
-                        <td>
-                            <span style="display:block"> @category.CategoryName</span>
-                        </td>
-                        <td>
-                            <span style="display:block">@category.Description</span>
-                        </td>
-                        <td class="text-right">
-                            <a class="btn btn-sm btn-default" href="~/Category/Input/@i/">
-                                <i class="fa fa-edit"></i>
-                            </a>
-                        </td>
+                        </th>
+                        <th style="width:50px">#</th>
+                        <th style="width:200px">CategoryName</th>
+                        <th style="width:200px">Description</th>
+                        <th style="width:80px"></th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-    <div class="box-footer clearfix text-center">
-        <ul class="pagination pagination-sm no-margin pull-right">
-            @{
-                int currentPage = Model.Page;
-                // Pagination head
-                if (currentPage - 5 > 0)
-                {
-                    int prePage = currentPage - 1;
-                    <li><a href="~/Category?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
-                    <li><a href="~/Category?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
-                    <li><a href="#">...</a></li>
-                }
-                int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
-                for (int page = startPage; page <= currentPage; page++)
-                {
-                    if (page == currentPage)
+                </thead>
+                <tbody>
+                    @foreach (var category in Model.Data)
                     {
-                        <li class="active"><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="categoryIDs" value="@category.CategoryID"/>
+                            </td>
+                            <td>@(++i + (Model.Page - 1) * Model.PageSize)</td>
+                            <td>
+                                <span style="display:block"> @category.CategoryName</span>
+                            </td>
+                            <td>
+                                <span style="display:block">@category.Description</span>
+                            </td>
+                            <td class="text-right">
+                                <a class="btn btn-sm btn-default" href="~/Category/Input/@category.CategoryID/">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                            </td>
+                        </tr>
                     }
-                    else
+                </tbody>
+            </table>
+        </div>
+        <div class="box-footer clearfix text-center">
+            <ul class="pagination pagination-sm no-margin pull-right">
+                @{
+                    int currentPage = Model.Page;
+                    // Pagination head
+                    if (currentPage - 5 > 0)
                     {
-                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        int prePage = currentPage - 1;
+                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=1">‹‹</a></li>
+                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=@prePage">‹</a></li>
+                        <li><a href="#">...</a></li>
                     }
-                }
+                    int startPage = currentPage - 4 > 0 ? currentPage - 4 : 1;
+                    for (int page = startPage; page <= currentPage; page++)
+                    {
+                        if (page == currentPage)
+                        {
+                            <li class="active"><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                        else
+                        {
+                            <li><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                    }
 
-                // Pagination tail
-                int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
-                for (int page = currentPage + 1; page <= endPage; page++)
-                {
-                    if (page == currentPage)
+                    // Pagination tail
+                    int endPage = currentPage + 4 < Model.PageCount ? currentPage + 4 : Model.PageCount;
+                    for (int page = currentPage + 1; page <= endPage; page++)
                     {
-                        <li class="active"><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        if (page == currentPage)
+                        {
+                            <li class="active"><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
+                        else
+                        {
+                            <li><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        }
                     }
-                    else
+                    if (currentPage + 4 < Model.PageCount)
                     {
-                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=@page">@page</a></li>
+                        int nextPage = currentPage + 1;
+                        <li><a href="#">...</a></li>
+                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
+                        <li><a href="~/Category?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
                     }
                 }
-                if (currentPage + 4 < Model.PageCount)
-                {
-                    int nextPage = currentPage + 1;
-                    <li><a href="#">...</a></li>
-                    <li><a href="~/Category?searchValue=@Model.SearchValue&page=@nextPage">›</a></li>
-                    <li><a href="~/Category?searchValue=@Model.SearchValue&page=@Model.PageCount">››</a></li>
-                }
-            }
-        </ul>
+            </ul>
+        </div>
     </div>
-
-</div>
+</form>
