--- a/LiteCommerce.Admin/Views/Category/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Category/Input.cshtml
@@ -1,19 +1,21 @@
-﻿@{
+﻿@model LiteCommerce.DomainModels.Category
+@{
 }
 <div class="box box-primary">
-    <form role="form">
-        <div class="box-header text-right">
-            <a href="~/Category">Back to List</a>
-        </div>
+    <div class="box-header text-right">
+        <a href="~/Category">Back to List</a>
+    </div>
+    <form role="form" action="~/Category/Input" method="post">
         <div class="box-body">
+            <input name="CategoryID" value="@Model.CategoryID" type="hidden" />
             <div class="form-group">
                 <label>Category Name:</label>
-                <input type="text" class="form-control" placeholder="Enter Category Name">
+                <input type="text" class="form-control" placeholder="Enter Category Name" name="CategoryName" value="@Model.CategoryName">
             </div>
             <div class="form-group row">
                 <div class="col-sm-12 col-md-12 col-lg-12">
                     <label>Description:</label>
-                    <textarea class="form-control" rows="4" name="note"></textarea>
+                    <textarea class="form-control" rows="4" name="Description">@Model.Description</textarea>
                 </div>
             </div>
         </div>
@@ -27,4 +29,5 @@
             </a>
         </div>
     </form>
+    @Html.ValidationMessage("")
 </div>
