--- a/LiteCommerce.Admin/Views/Customer/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Customer/Input.cshtml
@@ -1,43 +1,55 @@
-﻿@{
+﻿@model LiteCommerce.DomainModels.Customer
+@{
 }
 <div class="box box-primary">
-    <form role="form">
+    <form role="form" action="~/Customer/Input" method="post">
         <div class="box-header text-right">
             <a href="~/Customer">Back to List</a>
         </div>
         <div class="box-body">
             <div class="form-group">
-                <label>Company Name:</label>
-                <input type="text" class="form-control" placeholder="Enter Company Name">
+                <label>Customer ID:</label>
+                <input type="text" class="form-control" placeholder="Enter Customer ID" name="CustomerID" value="@Model.CustomerID" @(Model.CustomerID != "" ? "readOnly" : "")>
+            </div>
+            <div class="form-group">
+                <label>Company Name: </label>
+                <input type="text" class="form-control" placeholder="Enter Company Name" name="CompanyName" value="@Model.CompanyName">
             </div>
             <div class="form-group row">
                 <div class="col-sm-6">
                     <label>Contact Name:</label>
-                    <input type="text" class="form-control" placeholder="Contact Name">
+                    <input type="text" class="form-control" placeholder="Contact Name" name="ContactName" value="@Model.ContactName">
                 </div>
                 <div class="col-sm-6">
                     <label>Contact Title:</label>
-                    <input type="text" class="form-control" placeholder="Ex: Sale Manager">
+                    <input type="text" class="form-control" placeholder="Ex: Sale Manager" name="ContactTitle" value="@Model.ContactTitle">
                 </div>
             </div>
             <div class="form-group">
                 <label>Address:</label>
-                <input type="text" class="form-control" placeholder="Address">
+                <input type="text" class="form-control" placeholder="Address" name="Address" value="@Model.Address">
             </div>
             <div class="form-group row">
                 <div class="col-sm-6">
                     <label>Country:</label>
                     <select class="form-control">
                         <option value="">-- Choose Country --</option>
-                        <option value="USA">USA</option>
-                        <option value="UK">United Kingdom</option>
-                        <option value="CHINA">China</option>
-                        <option value="VN">Vietnam</option>
+                        @foreach (var country in SelectListHelper.Countries())
+                        {
+                            if (Model.Country == country.Value)
+                            {
+                                <option value="@country.Value" selected>@country.Text</option>
+                            }
+                            else
+                            {
+                                <option value="@country.Value">@country.Text</option>
+                            }
+                        }
                     </select>
                 </div>
                 <div class="col-sm-6">
                     <label>City:</label>
-                    <input type="text" class="form-control" placeholder="Ex: New Orleans">
+                    <input type="text" class="form-control" placeholder="Ex: New Orleans" name="City" value="@Model.City">
                 </div>
             </div>
             <div class="form-group row">
@@ -47,7 +59,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-phone"></i>
                         </div>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="Phone" value="@Model.Phone">
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -56,7 +68,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-fax"></i>
                         </div>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="Fax" value="@Model.Fax">
                     </div>
                 </div>
             </div>
@@ -70,5 +82,6 @@
                 Cancel
             </a>
         </div>
+        @Html.ValidationMessage("")
     </form>
 </div>
