--- a/LiteCommerce.Admin/Views/Shipper/Input.cshtml
+++ b/LiteCommerce.Admin/Views/Shipper/Input.cshtml
@@ -1,14 +1,16 @@
-﻿@{
+﻿@model LiteCommerce.DomainModels.Shipper
+@{
 }
 <div class="box box-primary">
-    <form role="form">
+    <form role="form" action="~/Shipper/Input" method="post">
         <div class="box-header text-right">
             <a href="~/Shipper">Back to List</a>
         </div>
+        <input name="ShipperID" value="@Model.ShipperID" type="hidden" />
         <div class="box-body">
             <div class="form-group">
                 <label>Company Name:</label>
-                <input type="text" class="form-control" placeholder="Enter Company Name">
+                <input type="text" class="form-control" placeholder="Enter Company Name" name="CompanyName" value="@Model.CompanyName">
             </div>
             <div class="form-group row">
                 <div class="col-sm-6">
@@ -17,7 +19,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-phone"></i>
                         </div>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="Phone" value="@Model.Phone">
                     </div>
                 </div>
             </div>
